--- a/test_sweep.ipynb
+++ b/test_sweep.ipynb
@@ -2,6 +2,179 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from setup_general import *\n",
+    "from prep_helpers import *\n",
+    "\n",
+    "def get_data():\n",
+    "    lang = 'est'\n",
+    "    if lang == 'en':\n",
+    "        data = combined_data_fully_translated.copy()\n",
+    "    if lang == 'est':\n",
+    "        data = combined_data.copy()\n",
+    "    # Feature specific engineering\n",
+    "    ## units - sizes -values\n",
+    "    # Finish unit translation/ unification &  values to float\n",
+    "    data['value'] = data['value'].apply(lambda x: float(x.replace(',', '.')) if type(x) == str else x)\n",
+    "\n",
+    "    # unify units\n",
+    "    data['unit'] = data['unit'].replace('10 x 15 cm','100 x 150 mm')\n",
+    "\n",
+    "    # mm to cm\n",
+    "    data['value'] = data.apply(lambda item: item['value'] / 10 if item['unit'] == 'mm' else item['value'], axis=1)\n",
+    "    data['unit'] = data['unit'].replace('mm','cm')\n",
+    "    data['value'] = pd.to_numeric(data['value'])    \n",
+    "\n",
+    "    data['unit'] = data['unit'].replace(np.nan,'*')\n",
+    "    data['parameter'] = data['parameter'].replace(np.nan,'*')\n",
+    "    data['unit'] = data['unit'].apply(lambda x: get_squared(x))\n",
+    "    # execution order is important\n",
+    "    data['value'] = data.apply(lambda item: extract_width_height_from_unit_to_value(item[['unit','value']])[1], axis=1)\n",
+    "    data['unit'] = data.apply(lambda item: extract_width_height_from_unit_to_value(item[['unit','value']])[0], axis=1)\n",
+    "    data['parameter_and_unit'] = data['parameter'] + ' IN ' + data['unit']\n",
+    "\n",
+    "    # parameter_and_units as single features with respective values\n",
+    "    # parameter_and_unit turned into one hot encoded features\n",
+    "    data = pd.get_dummies(data, columns=['parameter_and_unit'], prefix='', prefix_sep='')\n",
+    "\n",
+    "    #  for all new \"parameter with unit\" columns put the value in the column where a 1 is - others are 0 and remain 0\n",
+    "    for column in data.columns:\n",
+    "        if ' IN ' in column and '*' not in column:\n",
+    "            data[column] = data.apply(lambda item: extract_value(item['value'], item[column]), axis=1)            \n",
+    "\n",
+    "    for column in data.columns:\n",
+    "        # all the parameter with unit columns that contain arrays that are represeted as strings\n",
+    "        if (' IN ' in column) and (data[column].dtype == object):\n",
+    "            data[column + '_height'] = data.apply(lambda item: extract_height_width(item[column])[0], axis=1)\n",
+    "            data[column + '_width'] = data.apply(lambda item: extract_height_width(item[column])[1], axis=1)\n",
+    "            pd.to_numeric(data[column + '_height'])\n",
+    "            pd.to_numeric(data[column + '_width'])\n",
+    "            data = data.drop(column, axis=1)\n",
+    "\n",
+    "    for column in data.columns:\n",
+    "        if (' IN ' in column):\n",
+    "            data[column] = data[column].replace(np.nan,0)\n",
+    "    \n",
+    "\n",
+    "    data['country_and_unit'] = data.apply(lambda x: empty_to_nan(x['country_and_unit']), axis=1)\n",
+    "    data['technique'] = data['technique'].apply(lambda x: x.strip() if (type(x) == str) else x)\n",
+    "    ## country_unit - material - technique - location (splitting for features including multiple information)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    data['city_municipality'] = data.apply(lambda item: extract_city_country(item['country_and_unit'])[0], axis=1)\n",
+    "    data['country'] = data.apply(lambda item: extract_city_country(item['country_and_unit'])[1], axis=1)\n",
+    "\n",
+    "    # material\n",
+    "    # to make the following work even for nan values\n",
+    "    data['material'] = data['material'].replace(np.nan, 'nan')\n",
+    "    # prepare single values to be distinguishable\n",
+    "    data['material'] = data['material'].apply(lambda x: x.split('>'))\n",
+    "\n",
+    "    # https://stackoverflow.com/questions/45312377/how-to-one-hot-encode-from-a-pandas-column-containing-a-list\n",
+    "\n",
+    "    mlb = MultiLabelBinarizer()\n",
+    "    data = data.join(pd.DataFrame(mlb.fit_transform(data.pop('material')),\n",
+    "                            columns='material_' + mlb.classes_,\n",
+    "                            index=data.index))\n",
+    "\n",
+    "    # technique\n",
+    "    # to make the following work even for nan values\n",
+    "    data['technique'] = data['technique'].replace(np.nan, 'nan')\n",
+    "\n",
+    "    # prepare single values to be distinguishable\n",
+    "    data['technique'] = data['technique'].apply(lambda x: x.split('>'))\n",
+    "\n",
+    "    data = data.join(pd.DataFrame(mlb.fit_transform(data.pop('technique')),\n",
+    "                            columns='technique_' + mlb.classes_,\n",
+    "                            index=data.index), rsuffix='')\n",
+    "\n",
+    "    # location\n",
+    "    data['location_city'] = data['location'].apply(lambda x: 1 if (type(x) == str) and ('linn ' in x) else 0)\n",
+    "    data['location_building'] = data['location'].apply(lambda x: 1 if (type(x) == str) and ('hoone ' in x) else 0)\n",
+    "    data['location_street'] = data['location'].apply(lambda x: 1 if (type(x) == str) and ('tänav ' in x) else 0)\n",
+    "    data['location_country'] = data['location'].apply(lambda x: 1 if (type(x) == str) and ('riik ' in x) else 0)\n",
+    "    data['location_address'] = data['location'].apply(lambda x: 1 if (type(x) == str) and ('aadress ' in x) else 0)\n",
+    "    # start - end (formatting)\n",
+    "\n",
+    "    data['start'] = data[['name', 'start']].apply(extract_year_from_name, axis=1)    \n",
+    "        \n",
+    "    #grouping applied to the dataframe\n",
+    "    data['startYear'] = data['start'].apply(year_Grouping)\n",
+    "    data['startMonth'] = data['start'].apply(month_Grouping)\n",
+    "    data['startDay'] = data['start'].apply(day_Grouping)\n",
+    "            \n",
+    "    data['endYear'] = data['end'].apply(year_Grouping)\n",
+    "    data['endMonth'] = data['end'].apply(month_Grouping)\n",
+    "    data['endDay'] = data['end'].apply(day_Grouping)\n",
+    "\n",
+    "    #if there is no start year, but an end year, then the start year is set to the end year\n",
+    "    for i in range(1,len(data)):\n",
+    "        if data['startYear'].iloc[i] == 0 and data['startDay'].iloc[i] != 0:\n",
+    "            data['startYear'].iloc[i] = data['endYear'].iloc[i]\n",
+    "\n",
+    "\n",
+    "    #original columns are dropped as they are no longer needed\n",
+    "    data.drop(['start', 'end'], axis=1, inplace=True)\n",
+    "    ## event_type (brackets)\n",
+    "\n",
+    "    data['event_type'] = data['event_type'].apply(strip_brackets)\n",
+    "    ## color (grouping)\n",
+    "    #Grouping colours by their base colour - to avoid too many extra cloumns when hot encoding -> could always reverse this step\n",
+    "    #by using  something like data['color'] = combined_data_translated['color'] ?\n",
+    "\n",
+    "    #The base colours: red, blue, green, grey, yellow, patterned, orange, brown, white, black , pink\n",
+    "    #The most common/distingtive stay unchanged\n",
+    "\n",
+    "    #apply colour_grouping to the dataset\n",
+    "    data['color'] = data['color'].apply(colour_grouping)\n",
+    "    ## technique - material - sizes (threshold previously encoded)\n",
+    "\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_28357/865120103.py:109: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data['startYear'].iloc[i] = data['endYear'].iloc[i]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = get_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('data/general/combined_intermediate_ready.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
    "outputs": [],
@@ -264,6 +437,20 @@
     "\n",
     "    return X_res, y_res\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
