--- a/pred_nlp.ipynb
+++ b/pred_nlp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,6 +226,25 @@
     "test_emb = df[df.source == 'test']\n",
     "train_emb.to_csv('data/train_curie.csv', index=True)\n",
     "test_emb.to_csv('data/test_curie.csv', index=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# bag of words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get\n",
+    "\n",
+    "text['curie_similarity'] = text.text_features.apply(lambda x: get_embedding(x, model='text-similarity-curie-001'))"
    ]
   },
   {
@@ -33833,7 +33852,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
