--- a/preparation.ipynb
+++ b/preparation.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/till/projects/uni/data science/museum_item_classification/setup_general.py:92: DtypeWarning: Columns (11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  combined_intermediate_ready = pd.read_csv('./data/general/combined_intermediate_ready.csv', index_col='id', dtype={'type': str})\n"
+     ]
+    }
+   ],
    "source": [
     "from setup_general import *\n",
     "lang = 'est'\n",
@@ -416,6 +425,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# rescaling numerics values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# scale numeric features\n",
+    "numeric_features = ['ks', 'musealia_seria_nr', 'musealia_queue_nr', 'collection_queue_nr', 'element_count']\n",
+    "# continous numeric features (nan -> 0)\n",
+    "\n",
+    "data[numeric_features] = data[numeric_features].replace(np.nan, 0)\n",
+    "\n",
+    "data[numeric_features] = MinMaxScaler().fit_transform(data[numeric_features])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## technique - material - sizes (threshold previously encoded)\n"
    ]
   },
@@ -613,7 +645,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
