--- a/prep_rebalancing.ipynb
+++ b/prep_rebalancing.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/till/projects/uni/data science/museum_item_classification/setup_general.py:91: DtypeWarning: Columns (11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  combined_intermediate_ready = pd.read_csv('./data/general/combined_intermediate_ready.csv', index_col='id', dtype={'type': str})\n"
+     ]
+    }
+   ],
    "source": [
     "from setup_general import *"
    ]
@@ -124,81 +133,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "photo                                           2680\n",
-       "photo negative                                  1516\n",
-       "design/drawing/sketch                            567\n",
-       "plan                                             558\n",
-       "archaeological find                              549\n",
-       "poster                                           537\n",
-       "letter                                           434\n",
-       "book                                             366\n",
-       "document                                         325\n",
-       "manuscript                                       316\n",
-       "graphics                                         163\n",
-       "music sheet                                      149\n",
-       "script, song/vocal music                         141\n",
-       "coin                                             140\n",
-       "seal/imprint                                     133\n",
-       "digital image                                    130\n",
-       "postcard                                         108\n",
-       "small print                                       80\n",
-       "magazines                                         71\n",
-       "invitation                                        63\n",
-       "newspaper                                         61\n",
-       "medal                                             58\n",
-       "audio recording                                   54\n",
-       "telegram                                          46\n",
-       "slide                                             42\n",
-       "manuscript, musical composition                   41\n",
-       "calendar                                          33\n",
-       "label/sign                                        33\n",
-       "photographic material                             31\n",
-       "drawing                                           29\n",
-       "photo, postcard                                   29\n",
-       "letter of honor/honorary address                  22\n",
-       "musical instrument                                21\n",
-       "caricature                                        20\n",
-       "paper                                             18\n",
-       "seal                                              17\n",
-       "photographic negative, photographic negative      17\n",
-       "country                                           16\n",
-       "printed notes                                     15\n",
-       "suit                                              15\n",
-       "crate/box                                         14\n",
-       "dish/vessel                                       14\n",
-       "folder/booklet                                    13\n",
-       "sheet/linen                                       13\n",
-       "album                                             12\n",
-       "manuscript, sheet music                           12\n",
-       "jewel                                             12\n",
-       "notes                                             11\n",
-       "tape/ribbon                                       10\n",
-       "bag                                               10\n",
-       "sculpture                                          9\n",
-       "packaging                                          9\n",
-       "certificate                                        8\n",
-       "letter, postcard                                   5\n",
-       "doll                                               4\n",
-       "Name: type, dtype: int64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.type.value_counts()"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -208,20 +142,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2680, 1516, 537, 149, 61, 316, 558, 434, 549, 71, 80, 29, 163, 41, 140, 15, 133, 366, 325, 130, 567, 63, 141, 58, 13, 18, 42, 54, 108, 46, 17, 21, 22, 33, 4, 33, 17, 31, 15, 14, 29, 10, 9, 9, 10, 12, 14, 20, 12, 11, 16, 8, 5, 13, 12] 2680\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from imblearn.over_sampling import RandomOverSampler\n",
-    "balancer = RandomOverSampler(sampling_strategy=by_perc(y,100), random_state=0)\n",
+    "balancer = RandomOverSampler(sampling_strategy=by_num(y,500), random_state=0)\n",
     "X_resSMOTE, y_resSMOTE = balancer.fit_resample(x, y)\n",
     "dataSMOTE = X_resSMOTE.copy()\n",
     "dataSMOTE['type'] = y_resSMOTE"
@@ -229,72 +155,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "type\n",
-       "37    2680\n",
        "36    2680\n",
-       "11    1134\n",
-       "41    1116\n",
-       "1     1098\n",
-       "43    1074\n",
-       "22     868\n",
-       "4      732\n",
-       "14     650\n",
-       "26     632\n",
-       "18     326\n",
-       "30     298\n",
-       "45     282\n",
-       "8      280\n",
-       "48     266\n",
-       "12     260\n",
-       "42     216\n",
-       "51     160\n",
-       "25     142\n",
-       "19     126\n",
-       "32     122\n",
-       "29     116\n",
-       "2      108\n",
-       "54      92\n",
-       "50      84\n",
-       "27      82\n",
-       "21      66\n",
-       "5       66\n",
-       "39      62\n",
-       "16      58\n",
-       "38      58\n",
-       "23      44\n",
-       "31      42\n",
-       "6       40\n",
-       "35      36\n",
-       "47      34\n",
-       "40      34\n",
-       "9       32\n",
-       "44      30\n",
-       "52      30\n",
-       "13      28\n",
-       "10      28\n",
-       "49      26\n",
-       "17      26\n",
-       "0       24\n",
-       "20      24\n",
-       "28      24\n",
-       "33      22\n",
-       "3       20\n",
-       "53      20\n",
-       "46      18\n",
-       "34      18\n",
-       "7       16\n",
-       "24      10\n",
-       "15       8\n",
+       "37    1516\n",
+       "11     567\n",
+       "41     558\n",
+       "1      549\n",
+       "43     537\n",
+       "30     500\n",
+       "31     500\n",
+       "32     500\n",
+       "33     500\n",
+       "34     500\n",
+       "35     500\n",
+       "38     500\n",
+       "39     500\n",
+       "40     500\n",
+       "0      500\n",
+       "29     500\n",
+       "44     500\n",
+       "45     500\n",
+       "46     500\n",
+       "47     500\n",
+       "48     500\n",
+       "49     500\n",
+       "50     500\n",
+       "51     500\n",
+       "52     500\n",
+       "53     500\n",
+       "42     500\n",
+       "27     500\n",
+       "28     500\n",
+       "26     500\n",
+       "2      500\n",
+       "3      500\n",
+       "4      500\n",
+       "5      500\n",
+       "6      500\n",
+       "7      500\n",
+       "8      500\n",
+       "9      500\n",
+       "10     500\n",
+       "12     500\n",
+       "13     500\n",
+       "14     500\n",
+       "15     500\n",
+       "16     500\n",
+       "17     500\n",
+       "18     500\n",
+       "19     500\n",
+       "20     500\n",
+       "21     500\n",
+       "22     500\n",
+       "23     500\n",
+       "24     500\n",
+       "25     500\n",
+       "54     500\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
