--- a/prep_embeddings.ipynb
+++ b/prep_embeddings.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/till/projects/uni/data science/museum_item_classification/setup_general.py:93: DtypeWarning: Columns (11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/home/till/projects/uni/data science/museum_item_classification/setup_general.py:92: DtypeWarning: Columns (11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  combined_intermediate_ready = pd.read_csv('./data/general/combined_intermediate_ready.csv', index_col='id', dtype={'type': str})\n"
      ]
     }
@@ -24,7 +24,158 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# remove unneeded cols"
+    "# Preparation - extract text from ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def collect_text(item):\n",
+    "    return ' '.join(item[text_features]).strip()\n",
+    "\n",
+    "data = prep.copy()\n",
+    "\n",
+    "text_features = ['name', 'commentary', 'text', 'legend', 'initial_info', 'additional_text']\n",
+    "data[text_features] = data[text_features].fillna('')\n",
+    "data['text_features'] = data.apply(lambda item: collect_text(item),axis=1)\n",
+    "\n",
+    "data.to_csv('data/prep.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = prep.copy()\n",
+    "with_damages = combined_data_fully_translated.copy()\n",
+    "\n",
+    "data.text_features = data.text_features.replace(float('nan'), ' ',)\n",
+    "with_damages.damages = with_damages.damages.replace(float('nan'), ' ',)\n",
+    "\n",
+    "data.text_features = data.text_features + ' ' + with_damages.damages\n",
+    "\n",
+    "data.to_csv('data/prep.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = prep.copy()\n",
+    "text = data[['text_features','type','source']]\n",
+    "text.to_csv('data/text.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = text.copy()\n",
+    "data.text_features = data.text_features.apply(lambda x: x.strip())\n",
+    "data = data[data.text_features != '']\n",
+    "data.to_csv('data/text.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = text.copy()\n",
+    "train = df[df.source == 'train']\n",
+    "test = df[df.source == 'test']\n",
+    "train.to_csv('data/train_text.csv', index=True)\n",
+    "test.to_csv('data/test_text.csv', index=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# extract in Estonian"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_36267/1302915245.py:12: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  text.text_features = text.text_features.apply(lambda x: x.strip())\n"
+     ]
+    }
+   ],
+   "source": [
+    "def collect_text(item):\n",
+    "    return ' '.join(item[text_features]).strip()\n",
+    "\n",
+    "data = combined_data.copy()\n",
+    "\n",
+    "text_features = ['name', 'commentary', 'text', 'legend', 'initial_info', 'additional_text', 'damages']\n",
+    "data[text_features] = data[text_features].fillna('')\n",
+    "data['text_features'] = data.apply(lambda item: collect_text(item),axis=1)\n",
+    "\n",
+    "text = data[['text_features','type','source']]\n",
+    "\n",
+    "text.text_features = text.text_features.apply(lambda x: x.strip())\n",
+    "text = text[text.text_features != '']\n",
+    "\n",
+    "train = text[text.source == 'train'].drop('source', axis=1)\n",
+    "test = text[text.source == 'test'].drop('source', axis=1)\n",
+    "train.to_csv('data/text/train_text_est.csv', index=True)\n",
+    "test.to_csv('data/text/test_text_est.csv', index=True)\n",
+    "text.to_csv('data/text/text_est.csv')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# gpt3 text embeddings\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "openai.api_key = '***'\n",
+    "count = 0\n",
+    "def get_embedding(text, model=\"text-similarity-davinci-001\"):\n",
+    "    global count\n",
+    "    count += 1\n",
+    "    text = text.replace(\"\\n\", \" \")\n",
+    "    try:\n",
+    "        result = openai.Embedding.create(input = [text], model=model)['data'][0]['embedding']\n",
+    "    except:\n",
+    "        print(count)\n",
+    "        time.sleep(60)\n",
+    "        result = openai.Embedding.create(input = [text], model=model)['data'][0]['embedding']\n",
+    "    return result\n",
+    " \n",
+    "text['curie_similarity'] = text.text_features.apply(lambda x: get_embedding(x, model='text-similarity-curie-001'))\n",
+    "text.to_csv('data/text_embeddings/curie.csv', index=False)"
    ]
   },
   {
@@ -34,6 +185,8 @@
    "outputs": [],
    "source": [
     "data = curie.copy()\n",
+    "# remove unneeded cols\n",
+    "\n",
     "data.drop(columns=['text_features'], inplace=True)\n",
     "data.set_index('id', inplace=True)\n",
     "split = pd.DataFrame(data.curie_similarity.tolist(), index=data.index)\n",
@@ -85,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +253,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4000\n",
       "7284\n",
       "3166\n"
      ]
@@ -111,16 +263,19 @@
     "max_gram = 2\n",
     "max_features = 4000\n",
     "\n",
-    "CountVec = TfidfVectorizer(ngram_range=(min_gram,max_gram), stop_words='english', max_features=max_features)\n",
+    "dataset = text_est\n",
+    "stop_words = stopwords_est\n",
+    "\n",
+    "CountVec = TfidfVectorizer(ngram_range=(min_gram,max_gram), stop_words=stop_words, max_features=max_features)\n",
     "# to use bigrams ngram_range=(2,2)\n",
-    "Count_data = CountVec.fit_transform(text.text_features)\n",
+    "Count_data = CountVec.fit_transform(dataset.text_features)\n",
     "\n",
     "#create dataframe\n",
     "bow=pd.DataFrame(Count_data.toarray(),columns=CountVec.get_feature_names())\n",
     "\n",
     "bow = bow.add_prefix('word_')\n",
-    "bow.index = text.index\n",
-    "bow = bow.join(text[['source', 'type']])\n",
+    "bow.index = dataset.index\n",
+    "bow = bow.join(dataset[['source', 'type']])\n",
     "\n",
     "train = train_est_prepared.copy()\n",
     "val = val_est_prepared.copy()\n",
@@ -158,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
