--- a/preparation.ipynb
+++ b/preparation.ipynb
@@ -615,8 +615,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "data.to_csv('data/prepared_ready/prep_est.csv')\n",
     "\n",
     "train = data.loc[data['source']=='train'].drop('source',axis=1)\n",
@@ -645,7 +643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
